apps/nginx/deploynent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx
spec:
    replicas: 25
    selector:
        matchLabels:
            app: nginx
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
                - name: nginx
                  image: nginxdemos/nginx-hello:plain-text
                  ports:
                      - containerPort: 8080
