apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx
spec:
    ports:
      - name: https
        port: 443
        targetPort: 8080
        protocol: TCP
    selector:
        app: nginx
