apps/nginx/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: nginx-gateway
spec:
    gatewayClassName: nginx
    listeners:
        - name: http
          port: 80
          protocol: HTTP
