apps/nginx/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: nginx
spec:
    parentRefs:
        - name: nginx-gateway
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: nginx
                port: 80
